--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Luckiest+Guy&family=Macondo&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="container-fluid">
         <main class="row">
             <section class="col-12">
-                <h1 class="display-3 text-center text-white Luckiest-guy-regular">Ajedrez</h1>
+                <h1 class="display-3 text-center text-white macondo-regular">Ajedrez</h1>
             </section>
             <!--aca va 1 fila-->
             <section class="col-1"></section>
